[package]
name = "rust-core"
version = "0.1.0"
authors = ["Logan Keenan <d.logankeenan@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
routines_macros = { path = "../../routines/macros" }
routines = { path = "../../routines" }
serde = { version = "1.0", features = ["derive"] }
serde_derive = "1.0"
serde_json = "1.0.53"
include_dir = "0.6.0"
futures = "0.3.7"
#rusqlite = {version= "0.24.1", features=["bundled"]}
#diesel = { version = "1.0.0", features = ["postgres", "chrono", "r2d2", "uuidv07"] }
diesel = { version = "1.4.5", features = ["sqlite", "chrono"] }
diesel_migrations = "1.4.0"
libsqlite3-sys = { version = "0.18.0", features = ["bundled"] }
chrono = { version = "0.4", features = ["serde"] }
handlebars = "3.1.0"
rand = "0.7.3"
uuid = { version = "0.7", features = ["v4"] }
