[package]
name = "web-server"
version = "0.1.0"
authors = ["Logan Keenan <d.logankeenan@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rust-core = {path= "../rust-core"}
actix-web = "3"
routines = {path="../../routines"}
serde = { version = "1.0", features = ["derive"] }
serde_derive = "1.0"
serde_json = "1.0.53"
include_dir = "0.6.0"
